# dirpc

./: Cargo.toml  README.md  committed.toml  deny.toml
.config/: nextest.toml
.github/: dependabot.yml  zizmor.toml
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  committed.yml  coverage.yml  miri.yml
benches/: benchmarks.rs
src/: bridge.rs  json.rs  lib.rs  main.rs  server.rs  types.rs
src/process/: detectable.json  detectable.rs  mod.rs
src/transports/: ipc.rs  mod.rs  websocket.rs
tests/: integration_test.rs
