[package]
name = "dirpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "time",
  "fs",
  "io-util",
  "parking_lot",
] }
axum = { version = "0.8.9", features = ["macros", "http2"] }
sockudo-ws = { version = "1.7.4", features = [
  "axum-integration",
  "permessage-deflate",
  "simd",
  "tokio-runtime",
] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
jiff = "0.2"
sysinfo = "0.38"
reqwest = { version = "0.13", features = ["rustls", "socks"] }
clap = { version = "4", features = ["derive", "env", "cargo"] }
clap-verbosity-flag = { version = "3", default-features = false, features = [
  "tracing",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "parking_lot",
] }
dashmap = "6.1.0"
parking_lot = "0.12.5"
anyhow = { version = "1.0.102", features = ["backtrace"] }
serde_json = "1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc-safe = { version = "0.1", default-features = false, features = [
  "extended",
] }


[target.'cfg(target_arch = "aarch64")'.dependencies]
mimalloc-safe = { version = "0.1", default-features = false, features = [
  "extended",
  "no_opt_arch",
] }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc-safe = { version = "0.1", default-features = false, features = [
  "extended",
  "no_opt_arch",
  "override",
] }

[target.'cfg(target_endian = "little")'.dependencies]
simd-json = "0.17"

[dev-dependencies]
tokio-test = "0.4"
divan = "0.1"

[[bench]]
name = "benchmarks"
harness = false
