[package]
name = "dirpc"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1.52", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "time",
  "fs",
  "io-util",
  "parking_lot",
] }
sockudo-ws = { version = "1.7.4", features = [
  "permessage-deflate",
  "simd",
  "tokio-runtime",
] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
jiff = "0.2"
sysinfo = "0.38"
reqwest = { version = "0.13", features = ["rustls", "socks"] }
clap = { version = "4", features = ["derive", "env", "cargo"] }
clap-verbosity-flag = { version = "3", default-features = false, features = [
  "tracing",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "parking_lot",
] }
parking_lot = "0.12.5"
anyhow = { version = "1.0.102", features = ["backtrace"] }
serde_json = "1"
redb = "4"
fst = "0.4"
rkyv = { version = "0.8", features = ["bytes-1"] }
scc = { version = "3.7.0", features = ["serde"] }
papaya = "0.2"
ahash = "0.8.12"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc-safe = { version = "0.1", default-features = false, features = [
  "extended",
] }


[target.'cfg(target_arch = "aarch64")'.dependencies]
mimalloc-safe = { version = "0.1", default-features = false, features = [
  "extended",
  "no_opt_arch",
] }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc-safe = { version = "0.1", default-features = false, features = [
  "extended",
  "no_opt_arch",
  "override",
] }

[target.'cfg(target_endian = "little")'.dependencies]
simd-json = "0.17"
rkyv = { version = "0.8", features = ["little_endian"] }

[target.'cfg(target_endian = "big")'.dependencies]
rkyv = { version = "0.8", features = ["big_endian"] }

[dev-dependencies]
tokio-test = "0.4"
divan = { version = "4.6.0", package = "codspeed-divan-compat" }

[[bench]]
name = "benchmarks"
harness = false
